--- a/css/task8-2.css
+++ b/css/task8-2.css
@@ -1,88 +1,104 @@
-html{
-    font-size:625%;
+html {
+    font-size: 625%;
 }
+
 /*header*/
-.followus a{
-    width:0.3rem;
-    height:0.3rem;
-    display:inline-block;
-}
-.followus{
-    color:#29b078;
-    font-size:0.14rem;
-}
-.followus p{
-   padding-top:0.07rem;
+.followus a {
+    width: 0.3rem;
+    height: 0.3rem;
     display: inline-block;
 }
-.wechat{
-    background:url("../img/wechat.png") no-repeat right bottom;
-}
-.qq{
-    background:url("../img/qq.png") no-repeat right bottom;
-}
-.sina{
-    background:url("../img/sina.png") no-repeat right bottom;
-}
-/*手机页面导航*/
-@media screen and (max-width: 1080px){
-    .followus{
-        display:none;
-    }
-    .login{
-        display:block!important;
-        width:100%;
-        text-align: right;
-        padding-right:3%;
 
+.followus {
+    color: #29b078;
+    font-size: 0.14rem;
+}
+
+.followus p {
+    padding-top: 0.07rem;
+    display: inline-block;
+}
+
+.wechat {
+    background: url("../img/wechat.png") no-repeat right bottom;
+}
+
+.qq {
+    background: url("../img/qq.png") no-repeat right bottom;
+}
+
+.sina {
+    background: url("../img/sina.png") no-repeat right bottom;
+}
+
+/*手机页面导航*/
+@media screen and (max-width: 1080px) {
+    .followus {
+        display: none;
     }
-    .login1{
-        border-right:1px solid #29b078;
-        padding-right:5px;
+
+    .login {
+        display: block !important;
+        width: 100%;
+        text-align: right;
+        padding-right: 3%;
+            }
+
+    .login1 {
+        border-right: 1px solid #29b078;
+        padding-right: 5px;
     }
-    .login a{
-        color:black;
+
+    .login a {
+        color: black;
     }
 }
-.login{
+
+.login {
     display: none;
 }
+
 /*导航栏*/
-.btl{
-    background:#29b078;
+.btl {
+    background: #29b078;
 }
-.navigation{
-    background:#29b078 url("../img/jinengshu.png") no-repeat 4% center;
-    width:100%;
-    height:1.01rem;
+
+.navigation {
+    background: #29b078 url("../img/jinengshu.png") no-repeat 4% center;
+    width: 100%;
+    height: 1.01rem;
 }
-.navigation a{
-    display:block;
-    float:right;
-    margin-top:0.5rem;
-    color:white;
-    font-size:16px;
-    height:0.5rem;
+
+.navigation a {
+    display: block;
+    float: right;
+    margin-top: 0.5rem;
+    color: white;
+    font-size: 16px;
+    height: 0.5rem;
     text-decoration: none;
-    text-align:center;
-    width:98px;
+    text-align: center;
+    width: 98px;
     white-space: nowrap;
 }
-.frontpage{
-    margin-right:-32px;
+
+.frontpage {
+    margin-right: -32px;
 }
-.dp{
+.dp {
     display: none;
 }
-@media screen and (max-width:1080px) {
-    .dp{
+
+@media screen and (max-width: 1080px) {
+    .dp {
         display: block;
-        float:right;
-        margin-top:0.1rem;
-        z-index:999;
+        float: right;
+        margin-top: 0.1rem;
+        z-index: 999;
     }
 }
-@media screen and (max-width:1080px) {
+
+@media screen and (max-width: 1080px) {
     .navigation {
         position: absolute;
         background: #29b078 url("../img/jinengshu.png") no-repeat 12% center;
@@ -90,6 +106,7 @@ html{
         height: 0.8rem;
         padding-right: 12%;
     }
+
     .navigation a {
         display: none;
         float: right;
@@ -104,217 +121,238 @@ html{
         white-space: nowrap;
     }
 }
-.navigation a:hover{
-    border-bottom:4px solid white;
-}
-.hidden{
-    z-index:999;
+
+.navigation a:hover {
+    border-bottom: 4px solid white;
 }
 
-@media screen and (max-width:1080px ){
-    .faster{
-        margin-top:0.7rem;
-        padding-left:11%;
-        width:100%;
-        background-color:#f1a750;
+.hidden {
+    z-index: 999;
+}
+
+@media screen and (max-width: 1080px ) {
+    .faster {
+        margin-top: 0.7rem;
+        width: 100%;
+        background-color: #f1a750;
     }
 }
-main{
-    margin-top:0.5rem;
+
+main {
+    margin-top: 0.5rem;
 }
-.firstpage span{
-    color:#29b078;
+
+.firstpage span {
+    color: #29b078;
 }
+
 /*nav-bar*/
 
-.nav1{
-    box-shadow:2px 2px 2px 2px lightgrey;
-    width:25%;
-    top:24px;
+.nav1 {
+    box-shadow: 2px 2px 2px 2px lightgrey;
+    width: 25%;
+    top: 24px;
 }
-@media screen and (max-width: 1080px){
-    .nav1{
-        width:80%;
-        margin:0 auto;
+
+@media screen and (max-width: 1080px) {
+    .nav1 {
+        width: 100%;
+        margin: 0 auto;
     }
 }
-.hzqy{
-    font-size:0.15rem;
-    color:black;
-    border-bottom: 1px solid lightgrey;
-    padding-bottom:10px;
-    padding-top:10px;
 
-    margin-left:-15px;
-    margin-right:-15px;
+.hzqy {
+    font-size: 0.15rem;
+    color: black;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
-.hzqy p{
-    margin-left:65px;
+
+.hzqy p {
+    margin-left: 65px;
 }
-.company{
+
+.company {
     text-decoration: none;
 }
-.company li{
-    padding-top:0.3rem;
-    padding-bottom:0.2rem;
-    list-style-image:url("../img/椭圆7.png");
-    width:100px;
-    margin:0 auto;
+
+.company li {
+    padding-top: 0.3rem;
+    padding-bottom: 0.2rem;
+    list-style-image: url("../img/椭圆7.png");
+    width: 100px;
+    margin: 0 auto;
 }
-.company li a{
-    color:#29b078;
+
+.company li a {
+    color: #29b078;
 }
-.company a:hover{
-    color:#f9a372!important;
+
+.company a:hover {
+    color: #f9a372 !important;
+}
+
+.company li:hover {
+    list-style-image: url("../img/椭圆8.png") !important;
+}
+
+.faster {
+    width: 100%;
+    background-color: #f1a750;
+}
+
+@media screen and (max-width: 1080px ) {
+    .faster {
+        margin-top: 0.8rem;
     }
-.company li:hover{
-    list-style-image:url("../img/椭圆8.png")!important;
 }
-.faster{
-    width:100%;
-    background-color:#f1a750;
-}
-@media screen and (max-width:1080px ){
-   .faster{
-    margin-top:0.8rem;
-   }
-}
+
 /*content*/
-.content1{
-    box-shadow:2px 2px 2px 2px lightgrey;
-    width:72.5%;
-    top:24px;
-    margin-left:20px;
+.content1 {
+    box-shadow: 2px 2px 2px 2px lightgrey;
+    width: 72.5%;
+    top: 24px;
+    margin-left: 20px;
 
 }
-@media screen and (max-width:1080px ){
-    .content1{
-        box-shadow:2px 2px 2px 2px lightgrey;
-        margin-left:0.01rem;
-        margin-top:0.5rem;
-        width:80%;
+
+@media screen and (max-width: 1080px ) {
+    .content1 {
+        box-shadow: 2px 2px 2px 2px lightgrey;
+        width: 100%;
+        margin: 0.5rem auto;
     }
-    .title{
+
+    .title {
         display: flex;
-        color:lightgrey;
+        color: lightgrey;
         flex-direction: column;
     }
 }
-.maincontent{
-    max-width:1200px;
+
+.maincontent {
+    max-width: 1200px;
 }
-.row{
-    width:1200px;
-    margin:0 auto;
+
+.row {
+    width: 1200px;
+    margin: 0 auto;
 }
-@media screen and (max-width: 377px){
-    .maincontent{
-        margin-top:30px;
-        width:100%;
+
+@media screen and (max-width: 1080px) {
+    .maincontent {
+        width: 100%;
+        margin: 30px auto;
     }
-    .row{
-        width:375px;
-        margin:0 auto;
-    }
-}
-@media screen and (max-width: 1080px) and (min-width:377px){
-    .maincontent{
-        margin-top:30px;
-        width:100%;
-    }
-    .row{
-        width:600px;
-        margin:0 auto;
+
+    .row {
+        width: 100%;
+        margin: 0 auto;
     }
 }
 
-.title{
-   display: flex;
-    color:lightgrey;
+.title {
+    display: flex;
+    color: lightgrey;
     align-items: center;
 }
-.tudou{
-    padding:0.1rem 0.3rem;
-    color:lightgrey;
+
+.tudou {
+    padding: 0.1rem 0.3rem;
+    color: lightgrey;
 }
-.tudou p{
-    margin-top:0.3rem;
+
+.tudou p {
+    margin-top: 0.3rem;
     text-indent: 30px;
 }
-.last{
-    margin-bottom:3rem;
+
+.last {
+    margin-bottom: 3rem;
 }
+
 /*footer*/
-footer{
-    margin-top:2rem;
+footer {
+    margin-top: 2rem;
     position: relative;
-    background-color:#29b078;
-    width:100%;
-    left:0;
-    right:0;
-    bottom:0;
-    height:2.01rem;
-    color:white;
-    font-size:0.16rem;
+    background-color: #29b078;
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2.01rem;
+    color: white;
+    font-size: 0.16rem;
 }
-footer a{
-    font-size:0.14rem;
-    color:white;
+
+footer a {
+    font-size: 0.14rem;
+    color: white;
     text-decoration: none;
-    padding-bottom:5px;
+    padding-bottom: 5px;
 }
-footer a:hover{
-    color:white;
-    border-bottom:1px solid white;
+
+footer a:hover {
+    color: white;
+    border-bottom: 1px solid white;
 
     text-decoration: none;
 }
-.aboutus{
-    padding-top:0.37rem;
-    display:flex;
+
+.aboutus {
+    padding-top: 0.37rem;
+    display: flex;
     justify-content: space-between;
 }
-.left1{
+
+.left1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
 }
-.left1 a{
-
-}
-.middle1{
+.middle1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.copyright{
-    padding-top:0.1rem;
+
+.copyright {
+    padding-top: 0.1rem;
     text-align: center;
-    color:white;
-    font-size:0.13rem;
-    border-top:1px solid #32c086;
+    color: white;
+    font-size: 0.13rem;
+    border-top: 1px solid #32c086;
 }
-@media screen and (max-width:1080px){
-    .aboutus{
-        display:flex;
+
+@media screen and (max-width: 1080px) {
+    .aboutus {
+        display: flex;
         flex-direction: column;
-        padding-left:12%;
-        padding-right:12%;
+        padding-left: 12%;
+        padding-right: 12%;
     }
-    footer{
-        height:4rem;
+
+    footer {
+        height: 4rem;
+        width:100%;
+        margin:0 auto;
     }
 }
-@media screen and (max-width:1080px){
-    .copyright{
-        padding-top:0.1rem;
+
+@media screen and (max-width: 1080px) {
+    .copyright {
+        padding-top: 0.1rem;
         text-align: center;
-        color:white;
-        font-size:0.05rem;
-        border-top:1px solid #32c086;
+        color: white;
+        font-size: 0.05rem;
+        border-top: 1px solid #32c086;
     }
 }
-.container{
-    max-width:1200px;
+
+.container {
+    max-width: 1200px;
 }
