--- a/css/task8-3.css
+++ b/css/task8-3.css
@@ -121,7 +121,6 @@ html{
     }
 }
 main{
-    position: relative;
     margin-top:1.7rem;
 }
 @media screen and (max-width: 1080px){
@@ -134,7 +133,7 @@ main{
 }
 .slidebar{
     margin:0 auto;
-    width:12rem;
+    width:1200px;
     right:0;
     left:0;
     padding-top:0.3rem;
@@ -163,14 +162,14 @@ main{
     }
 }
 .carrer{
-
     color:#29b078;
+
 }
 .breadcrumb{
     background-color:white;
     padding-top:0.3rem;
     height:0.8rem;
-    width:11.7rem;
+    width:1200px;
 }
 @media screen and (max-width: 1080px){
     .breadcrumb{
@@ -210,24 +209,16 @@ main{
         width:100%;
     }
 }
-.matt{
-    width:1200px;
-}
-@media screen and (max-width: 1080px){
-    .matt{
-        width:100%;
-    }
-}
 .headline{
     font-size:0.15rem;
     font-weight:bold;
     border-bottom:2px solid lightgrey;
     padding-bottom:0.2rem;
-    margin-left:-5px;
     width:1200px;
 }
-.headline p{
-    margin-left:-11px;
+
+.headline p {
+    margin-left: -11px;
 }
 @media screen and (max-width: 1080px){
     .headline{
@@ -237,15 +228,24 @@ main{
 }
 .carrer1{
     margin-top:0.3rem;
-    margin-left:-17px;
-    margin-right:15px;
+    padding-left:0;
+    width:400px;
 }
+.carrer2{
+    margin-top:0.3rem;
+    padding-left:0;
+    width:400px;
+    padding-right:0;
+}
+
 @media screen and (max-width: 1080px){
     .carrer1{
-        margin-top:0.3rem;
-        margin-left:2%;
-        margin-right:2%;
+        margin:0 auto;
         width:100%;
+    }
+    .carrer2{
+        width:100%;
+        margin:0 auto;
     }
 }
 
@@ -253,7 +253,7 @@ main{
     position:absolute;
     top:0.01rem;
     height:414px;
-    width:382px;
+    width:100%;
     background:rgba(61,61,61,0.800);
     color:white;
     text-align:center;
@@ -274,12 +274,16 @@ main{
     display:block;
 }
 .headpic{
-    display:flex;
-    justify-content: space-between;
     padding-top:0.2rem;
     border:1px solid #eeeded;
     border-bottom:none;
-    width:382px;
+    display: flex;
+}
+.item1{
+    flex:1;
+}
+.item2{
+    flex:2;
 }
 @media screen and (max-width: 1080px){
     .headpic{
@@ -291,6 +295,21 @@ main{
         width:100%;
     }
 }
+@media screen and (max-width: 380px){
+    .headpic{
+        display:flex;
+        justify-content: space-between;
+        padding-top:0.2rem;
+        border:1px solid #eeeded;
+        border-bottom:none;
+        width:100%;
+        font-size:9px!important;
+    }
+    .headpic h4{
+        font-size:11px!important;
+        font-weight:bold;
+    }
+    }
 .headpic h4{
     font-size:16px;
     font-weight:bold;
@@ -298,18 +317,8 @@ main{
 .headpic span{
     padding:0 10px 10px 10px;
 }
-@media screen and (max-width: 1080px){
-    .headpic{
-        display:flex;
-        justify-content: space-between;
-        padding-top:0.2rem;
-        border:1px solid lightgrey;
-        font-size:0.1rem;
-    }
-}
 .table1{
     box-shadow: 1px 1px 2px #eeeded;
-    width:382px;
     border-top:none;
 }
 @media screen and (max-width: 1080px){
@@ -399,9 +408,6 @@ footer a:hover{
     justify-content: space-between;
 
 }
-.left1 a{
-
-}
 .middle1{
     display: flex;
     flex-direction: column;
@@ -436,4 +442,19 @@ footer a:hover{
 }
 .container{
     max-width:1200px;
+}
+.row{
+    width:1200px;
+}
+@media screen and (max-width:1080px){
+    .row{
+        width:100%;
+        margin:0 auto;
+    }
+    .row1{
+        margin-left:0!important;
+    }
+}
+.row1{
+    margin-left:-30px;
 }
