--- a/css/task8.css
+++ b/css/task8.css
@@ -140,7 +140,7 @@ main{
 @media screen and (max-width: 1080px){
     .ct1{
 
-        width:320px;
+        width:100%;
         font-size:16px;
        margin:1.63rem auto;
     }
@@ -220,12 +220,14 @@ h5{
 }
 @media screen and (max-width:1080px ){
     .howtolearn{
-        width:320px;
+        width:100%;
         height:60px;
+        margin:0 auto;
     }
     .howtolearn1{
-        width:320px;
+        width:100%;
         height:120px;
+        margin:0 auto;
     }
 }
 .container{
@@ -236,7 +238,7 @@ h5{
 }
 @media screen and (max-width:1080px ){
     .row{
-        width:320px;
+        width:100%;
         margin:0 auto;
     }
 }
@@ -263,25 +265,18 @@ h5{
     width: 295px;
 }
 @media screen and (max-width: 1080px){
-
-    .arrow{
-        display:flex;
-        justify-content: flex-start;
-        margin-bottom:30px;
-        font-size:10px;
-        width:300px;
-    }
-    .arrow{
+        .arrow{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width:3.2rem;
+        width:100%;
         font-size:12px;
         padding-left:2px;
+            margin:0 auto;
     }
     .num{
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         border: 1px solid #e6e7e6 ;
         display:flex;
@@ -313,17 +308,32 @@ h5{
     border: 1px solid #e6e7e6 ;
     border-radius: 6px;
     box-shadow:1px 1px  1px lightgrey;
+    margin-bottom: 0.1rem;
 
 }
 @media screen and (max-width: 1080px){
     .show{
-        margin-top:1.4rem;
+        width:100%;
+        margin:0 auto;
     }
-}
-@media screen and (max-width: 1080px){
-    .showone{
-        margin-left:10px;
+    .students{
+        height: 368px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        text-align: center;
+        margin: 4% auto;
+        border: 1px solid #e6e7e6 ;
+        border-radius: 6px;
+        box-shadow:1px 1px  1px lightgrey;
     }
+    .students img{
+        width:128px!important;
+        display: block!important;
+        margin:4% auto!important;
+    }
+
 }
 .show h5{
     margin-bottom: 71px;
@@ -370,7 +380,7 @@ h5{
 @media screen and (max-width: 1080px){
     .company{
         height: 15rem;
-        width: 3rem;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -381,13 +391,38 @@ h5{
         border-radius: 6px;
         box-shadow:2px 2px 5px 2px lightgrey;
     }
-    .company span{
-        width:2rem;
-        height:2rem;
-        display:block;
-        margin-left:-23px;
+    .company a {
+        height: 2rem;
+        width:100%;
+        display: block;
+        padding-left:20px;
+        margin:0 auto;
     }
     }
+.yuanquan {
+    width: 0.6rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.circle1 {
+    background-color: #29b078;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 0.1rem;
+    height: 0.1rem;
+    display: inline-block;
+}
+.circle {
+    background-color: white;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 0.1rem;
+    height: 0.1rem;
+    display: inline-block;
+    box-shadow:1px 1px 1px 1px lightgrey;
+}
 /*友情链接*/
 .links{
 
@@ -402,8 +437,8 @@ h5{
      flex-direction:row;
      justify-content: space-around;
 }
-.lins ul li{
-    list-style: none;
+.links ul li{
+    color:lightgrey;
 }
 .links a{
     color:lightgrey;
@@ -415,7 +450,7 @@ h5{
 @media screen and (max-width: 1080px) {
     .links {
         height: 6rem;
-        width: 3rem;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
